--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Momentum Clone</title>
 </head>
 <body>
-    
+    <form id="login-form" class="hidden">
+        <input 
+            required 
+            maxlength="15" 
+            minlength="6" 
+            type="text" 
+            placeholder="What is your name?"
+            />
+        <button>Log in</button>
+    </form>
+    <h1 id="greeting" class="hidden"></h1>
 
-    <script src = "script.js"></script>
+    <h2 id="clock"></h2>
+<!--
+<a href="http://naver.com"> Go to naver </a>
+-->
+    <script src = "js/greeting.js"></script>
+    <script src = "js/clock.js"></script>    
 </body>
-</html></html>
+</html>
