--- a/index.html
+++ b/index.html
@@ -20,11 +20,26 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
 
-    <h2 id="clock"></h2>
+    <h2 id="clock">00:00:00</h2>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+    <form id ="todo-form">
+        <input type="text" placeholder="Write a to do list" required>
+    </form>
+
+    <ul id="todo-list">
+        
+    </ul>
+    
 <!--
 <a href="http://naver.com"> Go to naver </a>
 -->
+    <script src = "js/quotes.js"></script>
     <script src = "js/greeting.js"></script>
-    <script src = "js/clock.js"></script>    
+    <script src = "js/clock.js"></script>
+    <script src = "js/background.js"></script>    
+    <script src = "js/todo.js"></script> 
 </body>
 </html>
