--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <span></span>
         <span></span>
     </div>
+
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
+
+
     <form id ="todo-form">
         <input type="text" placeholder="Write a to do list" required>
     </form>
@@ -36,6 +43,7 @@
 <!--
 <a href="http://naver.com"> Go to naver </a>
 -->
+    <script src = "js/weather.js"></script>
     <script src = "js/quotes.js"></script>
     <script src = "js/greeting.js"></script>
     <script src = "js/clock.js"></script>
